Move API docs under documentation with new sidebar

--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -1,4 +1,4 @@
-- content_for :title, "API"
+- content_for :title, "How to use the API"
 %h1= yield :title
 
 %p The API allows you to programatically retrieve data from any public scraper using an SQL query. It's all pretty easy.
