--- a/app/assets/stylesheets/documentation.css.scss
+++ b/app/assets/stylesheets/documentation.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the documentation controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#sidebar {
+  margin-top: 20px;
+}
