--- a/app/views/layouts/documentation.html.haml
+++ b/app/views/layouts/documentation.html.haml
@@ -1,9 +1,9 @@
 - content_for :content do
   .row
     .col-md-2
-      %ul.nav.nav-list#sidebar
-        %li= link_to "Main documentation", documentation_index_path
-        %li= link_to "How to use the API", api_documentation_index_path
+      %ul.nav.nav-pills.nav-stacked#sidebar
+        %li{class: ("active" if current_page?(documentation_index_path))}= link_to "Main documentation", documentation_index_path
+        %li{class: ("active" if current_page?(api_documentation_index_path))}= link_to "How to use the API", api_documentation_index_path
     .col-md-10
       = yield
 = render template: "layouts/application"
