--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -42,7 +42,7 @@
           Forked from
           = link_to "ScraperWiki", @scraper.scraperwiki_url, target: "_blank"
 
-      = sync partial: "status", resource: @scraper
+      = render "status"
       = render "console"
       = render "data"
       = render "statistics"
