Give names to users in heap analytics

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -60,6 +60,7 @@
     .container
       = bootstrap_flash
       = content_for?(:content) ? yield(:content) : yield
+      = render "heap_analytics_identify"
     
     %footer
       .container
