--- a/app/views/application/_heap_analytics_identify.html.haml
+++ b/app/views/application/_heap_analytics_identify.html.haml
@@ -1,3 +1,3 @@
 - if ENV['HEAP_ANALYTICS_TRACKING_ID'] && current_user
   :javascript
-    heap.identify({name: "#{current_user.name}", handle: "#{current_user.nickname}");
+    heap.identify({name: "#{current_user.name}", handle: "#{current_user.nickname}"});
