--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -1,23 +1,32 @@
-- rows = @scraper.database.first_ten_rows
-- if rows && !rows.empty?
-  %h3 Data
-  %p
-    - unless signed_in?
-      To download data
-      = link_to "sign in with GitHub", user_omniauth_authorize_path(:github), class: "btn btn-default"
-    .btn-group
-      = link_to "Download table (as CSV)", scraper_data_path(@scraper, format: :csv, query: @scraper.database.select_all), class: "btn btn-default", disabled: !signed_in?
-      = link_to "Download SQLite database", scraper_data_path(@scraper, :format => :sqlite), class: "btn btn-default", disabled: !signed_in?
-      = link_to "Use the API", api_documentation_index_path(scraper: @scraper.full_name), class: "btn btn-default"
-  %p rows #{[10, @scraper.database.no_rows].min} / #{@scraper.database.no_rows} (#{number_to_human_size @scraper.database.sqlite_db_size})
-  .table-responsive.scraper-data
-    %table.table.table-striped.table-bordered.table-condensed
-      %tr
-        - rows.first.each_key do |field|
-          %th= field
-      - rows.each do |row|
-        %tr
-          - row.each_value do |v|
-            %td
-              %div.has-popover{data: {toggle: "popover", placement: "bottom", trigger: "hover", content: v, container: "body"}}
-                = auto_link(v.to_s)
+- active_table = @scraper.database.table_names.first
+
+%h3 Data
+%ul.nav.nav-tabs
+  - @scraper.database.table_names.each do |table|
+    %li{class: ("active" if table == active_table)}
+      = link_to table, "#table_#{table}", data: {toggle: "tab"}
+
+.tab-content
+  - @scraper.database.table_names.each do |table|
+    .tab-pane{class: ("active" if table == active_table), id: "table_#{table}"}
+      - rows = @scraper.database.first_ten_rows(table)
+      %p
+        - unless signed_in?
+          To download data
+          = link_to "sign in with GitHub", user_omniauth_authorize_path(:github), class: "btn btn-default"
+        .btn-group
+          = link_to "Download table (as CSV)", scraper_data_path(@scraper, format: :csv, query: @scraper.database.select_all(table)), class: "btn btn-default", disabled: !signed_in?
+          = link_to "Download SQLite database", scraper_data_path(@scraper, :format => :sqlite), class: "btn btn-default", disabled: !signed_in?
+          = link_to "Use the API", api_documentation_index_path(scraper: @scraper.full_name), class: "btn btn-default"
+      %p rows #{[10, @scraper.database.no_rows(table)].min} / #{@scraper.database.no_rows(table)} (#{number_to_human_size @scraper.database.sqlite_db_size})
+      .table-responsive.scraper-data
+        %table.table.table-striped.table-bordered.table-condensed
+          %tr
+            - rows.first.each_key do |field|
+              %th= field
+          - rows.each do |row|
+            %tr
+              - row.each_value do |v|
+                %td
+                  %div.has-popover{data: {toggle: "popover", placement: "bottom", trigger: "hover", content: v, container: "body"}}
+                    = auto_link(v.to_s)
