Add gravatars next to people and orgs on home page

--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -61,6 +61,7 @@
     %ul.list-unstyled
       - User.all.order(created_at: :desc).limit(10).each do |user|
         %li
+          = image_tag user.gravatar_url(20), width: 20
           = link_to user.nickname, user
           - if user.name
             &mdash;
@@ -69,6 +70,7 @@
     %ul.list-unstyled
       - Organization.all.select{|u| !u.scrapers.empty?}.each do |org|
         %li
+          = image_tag org.gravatar_url(20), width: 20
           = link_to org.nickname, org
           - if org.name
             &mdash;
