--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -41,11 +41,12 @@
         %p
           Forked from
           = link_to "ScraperWiki", @scraper.scraperwiki_url, target: "_blank"
-      %p
-        Contributors
-        - @scraper.contributors.each do |contributor|
-          = link_to contributor do
-            = image_tag contributor.gravatar_url(20), size: "20x20", class: "has-tooltip", data: {placement: "bottom", title: contributor.nickname}
+      - unless @scraper.contributors.empty?
+        %p
+          Contributors
+          - @scraper.contributors.each do |contributor|
+            = link_to contributor do
+              = image_tag contributor.gravatar_url(20), size: "20x20", class: "has-tooltip", data: {placement: "bottom", title: contributor.nickname}
 
       = render "status"
       = render "console"
