--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -14,11 +14,11 @@
         %p
           - unless signed_in?
             To download data
-            = link_to "sign in with GitHub", user_omniauth_authorize_path(:github), class: "btn btn-default"
+            = button_link_to "sign in with GitHub", user_omniauth_authorize_path(:github)
           .btn-group
-            = link_to "Download table (as CSV)", scraper_data_path(@scraper, format: :csv, query: @scraper.database.select_all(table)), class: "btn btn-default", disabled: !signed_in?
-            = link_to "Download SQLite database", scraper_data_path(@scraper, :format => :sqlite), class: "btn btn-default", disabled: !signed_in?
-            = link_to "Use the API", api_documentation_index_path(scraper: @scraper.full_name), class: "btn btn-default"
+            = button_link_to "Download table (as CSV)", scraper_data_path(@scraper, format: :csv, query: @scraper.database.select_all(table)), disabled: !signed_in?
+            = button_link_to "Download SQLite database", scraper_data_path(@scraper, :format => :sqlite), disabled: !signed_in?
+            = button_link_to "Use the API", api_documentation_index_path(scraper: @scraper.full_name)
         %p rows #{[10, @scraper.database.no_rows(table)].min} / #{@scraper.database.no_rows(table)} (#{number_to_human_size @scraper.database.sqlite_db_size})
         .table-responsive.scraper-data
           %table.table.table-striped.table-bordered.table-condensed
