--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -77,4 +77,6 @@
             = org.name
   .col-md-6
     %h2 Recently Active Scrapers
-    .list-group= render Scraper.order(:updated_at => :desc).limit(10).all
+    .list-group
+      - Scraper.order(:updated_at => :desc).limit(10).all.each do |scraper|
+        = sync partial: "scraper", resource: scraper
