Display running indicator in the correct place

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -35,6 +35,12 @@ span.internal {
   height: 15px;
 }
 
+.large-icon-box {
+  width: 40px;
+  height: 40px;
+  margin-left: 10px;
+}
+
 .pulse {
   vertical-align: bottom;
   width: 1em;
