--- a/app/views/sync/scrapers/_console.html.haml
+++ b/app/views/sync/scrapers/_console.html.haml
@@ -1,3 +1,3 @@
 #scraper
   - if scraper.last_run
-    = render partial: "runs/console", locals: {run: scraper.last_run, open: !scraper.last_run.finished_successfully?}
+    = render partial: "runs/console", locals: {run: scraper.last_run, open: true}
