When new log lines are added show them immediately

--- a/app/views/runs/_console.html.haml
+++ b/app/views/runs/_console.html.haml
@@ -1,2 +1,4 @@
 #console.collapse{class: ("in" if open)}
-  .log_lines= render run.log_lines.order(:number)
+  .log_lines#log_lines
+    = render partial: "sync/log_lines/log_line", collection: run.log_lines.order(:number)
+    = sync_new partial: "log_line", resource: LogLine.new, scope: run
