--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -1,3 +1,3 @@
 - content_for :title, @scraper.full_name
 
-= render partial: "show_partial", locals: {scraper: @scraper}
+= sync partial: "show_partial", resource: @scraper, refetch: true
