--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -22,9 +22,10 @@
         %p rows #{[10, @scraper.database.no_rows(table)].min} / #{@scraper.database.no_rows(table)} (#{number_to_human_size @scraper.database.sqlite_db_size})
         .table-responsive.scraper-data
           %table.table.table-striped.table-bordered.table-condensed
-            %tr
-              - rows.first.each_key do |field|
-                %th= field
+            - unless rows.empty?
+              %tr
+                - rows.first.each_key do |field|
+                  %th= field
             - rows.each do |row|
               %tr
                 - row.each_value do |v|
