Put the data table first if it's there

--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -1,4 +1,4 @@
-- active_table = @scraper.database.table_names.first
+- active_table = @scraper.database.first_table_name
 
 - if active_table
   %h3 Data
