--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -77,4 +77,5 @@
             = org.name
   .col-md-6
     %h2 Recently Active Scrapers
+    %p= link_to "See More&hellip;".html_safe, scrapers_path
     .list-group= render Scraper.order(:updated_at => :desc).limit(10).all
