Use timeago to update times. Fixes #235

--- a/app/views/runs/_history.html.haml
+++ b/app/views/runs/_history.html.haml
@@ -1,4 +1,4 @@
-- cache ["v2", run] do
+- cache ["v3", run] do
   %li.list-group-item{class: run.finished_successfully? ? "alert-success" : "alert-danger"}
     - if run.auto?
       Auto
@@ -13,8 +13,7 @@
       completed successfully
     - else
       failed
-    = time_ago_in_words(run.finished_at)
-    ago
+    = timeago_tag(run.finished_at, force: true)
     .pull-right.hidden-xs
       run time
       = "%.1f s" % run.wall_time
