--- a/app/views/runs/_status.html.haml
+++ b/app/views/runs/_status.html.haml
@@ -1,13 +1,23 @@
 - if run.queued?
   .alert.alert-info
-    The scraper is <strong>queued to run</strong>. It was queued
+    The scraper is <strong>queued to run</strong>.
+    It was queued
+    - if run.auto?
+      automatically
+    - else
+      manually
     #{timeago_tag(run.queued_at, force: true)}.
     %span.muted
       (Refresh page for the latest)
 - elsif run.running?
   .alert.alert-info
-    The scraper is <strong>running</strong>. It was started
-    #{timeago_tag(run.started_at, force: true)}.
+    The scraper is <strong>running</strong>.
+    It was queued
+    - if run.auto?
+      automatically
+    - else
+      manually
+    #{timeago_tag(run.queued_at, force: true)}.
     %span.muted
       (Refresh page for the latest)
 - elsif run.finished_successfully?
