--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -23,7 +23,7 @@
           - else
             = render partial: "auto_clock", locals: {scraper: @scraper}
           - if @scraper.queued? || @scraper.running?
-            .pulse
+            = render "spinner"
         %h4= @scraper.description
     .col-md-2
       - if signed_in?
