--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -47,7 +47,14 @@
             %li= link_to "Pricing", pricing_path
             %li= link_to "Documentation", documentation_index_path
             - if user_signed_in? && current_user.admin?
-              %li= link_to "Admin", "/admin/jobs", data: {"no-turbolink" => true}
+              %li(class="dropdown")
+                %a(href="#" class="dropdown-toggle" data-toggle="dropdown")
+                  Admin
+                  %b(class="caret")
+                %ul(class="dropdown-menu")
+                  %li= link_to "Owner Metrics", admin_owners_path
+                  %li= link_to "Background queue", "/admin/jobs", data: {"no-turbolink" => true}
+
           %ul.nav.navbar-nav.navbar-right
             %li
               - if user_signed_in?
