--- a/app/views/users/watching.html.haml
+++ b/app/views/users/watching.html.haml
@@ -17,7 +17,7 @@
   .list-group
     - @user.scrapers_watched.each do |scraper|
       .row
-        .col-md-11= render scraper
+        .col-md-11= render partial: "sync/scrapers/scraper", locals: {scraper: scraper}
         .col-md-1
           - if @user == current_user
             = render partial: "scrapers/watch_button", locals: {scraper: scraper}
@@ -34,7 +34,7 @@
       - if user.scrapers.empty?
         %p Has no scrapers
       - else
-        .list-group= render user.scrapers
+        .list-group= render partial: "sync/scrapers/scraper", collection: user.scrapers
 
 - @user.organizations_watched.each do |organization|
   .row
@@ -48,6 +48,4 @@
       - if organization.scrapers.empty?
         %p Has no scrapers
       - else
-        .list-group= render organization.scrapers
-
-
+        .list-group= render partial: "sync/scrapers/scraper", collection: organization.scrapers
